fixed navbar breaking with scrollbar on a very specific resolution ;-;

--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ li {
     width: auto
 }
 
-@media screen and (max-width: 864px) {
+@media screen and (max-width: 890px) {
     .nav-links {
         display: none;
     }
